# altigen-chatkit-mcp-demo

./: .env.example  .gitignore  .pull-shark-log  README.md  pyproject.toml
chat_backend/: activity.py  agent_definition.py  canvas_enricher.py  chat_server.py  main.py  store.py  widgets.py
data/docs/: adipara_label.md  cardiomax_label.md  clinops_brief_2026q1.md  commercial_brief_2026q1.md  competitive_landscape_2026.md  glucotide_label.md  lipidra_label.md  neurolin_label.md  pv_safety_bulletin_2026q1.md  qsm_deviation_brief_2026q1.md  trial_protocol_onkoria.md  zenoxitam_label.md
frontend/: next.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/login/: CursorReadout.tsx  MoleculeCanvas.tsx  page.tsx
frontend/app/sandbox/: SandboxClient.tsx  page.tsx
frontend/app/studio/: page.tsx
frontend/components/: AgentActivity.tsx  AppShell.tsx  ChatDock.tsx  CommandPalette.tsx  DashboardClient.tsx  DashboardHeader.tsx  KpiCards.tsx  Logo.tsx  PlotlyChart.tsx  ProductsTable.tsx  StatusPill.tsx  StudioCanvas.tsx  StudioClient.tsx  TrendChart.tsx  UtcClock.tsx  VoiceButton.tsx  VoiceOverlay.tsx
frontend/components/sandbox/: Canvas.tsx  DashboardSidebar.tsx  FiltersBar.tsx  NewWidgetMenu.tsx  PropertiesPanel.tsx  WidgetRenderer.tsx
frontend/lib/: activity-store.ts  agent-tools.ts  api.ts  auth.ts  chat-bridge.ts  dock-state.ts  sandbox-store.ts  selection-state.ts  studio-state.ts  theme-state.ts  voice-state.ts
mcp_server/: server.py
scripts/: bootstrap_vector_store.py  seed.py
(+4 files in other folders)
