[project]
name = "altigen-pharma-demo"
version = "0.1.0"
description = "Mock agentic chat demo for Think Thursday — ChatKit + FastMCP 3.0 + RAG over a pharma SQLite store"
requires-python = ">=3.12"
dependencies = [
  "fastmcp>=3.2.4",
  "openai-chatkit>=1.6.3",
  "openai-agents>=0.14.8",
  "openai>=1.60.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
deck = ["python-pptx>=1.0.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server", "chat_backend"]
